...
  ~ GNU General Public License for more details.
  -->

<resources>

    <!-- General -->
    <string name="preferences">Options</string>
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="training">Training</string>
    <string name="bow">Bow</string>
    <string name="arrow">Arrow</string>
    <string name="round">Round</string>
...
    </plurals>
    <plurals name="passe_selected">
        <item quantity="one">%d end selected</item>
        <item quantity="other">%d ends selected</item>
    </plurals>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="statistic">Statistic</string>

    <!-- Share -->
    <string name="share">Share</string>
    <string name="dispersion_pattern">Dispersion pattern</string>
...
        <item quantity="other">%d arrows</item>
    </plurals>

    <string name="target_face">Target face</string>

    <!-- Scoreboard -->
    <string name="scoreboard">Scoreboard</string>
    <string name="arrows">Arrows</string>
    <string name="sum">Score</string>
    <string name="carry">R.Total</string>
    <string name="action_print">Print</string>
    <string name="average">Average</string>

...
    <string name="donate_10">Donate me a large pizza</string>
    <string name="donate_20">Donate me some fuel</string>
    <string name="donation_thank">Thank you for your support!</string>
    <string name="donate_text" formatted="false">The amounts are incl. VAT and 30% fees for Google. Alternatively you may gladly donate on the PayPal account dreier.florian@gmail.com.</string>

    <!-- Timer -->
    <string name="timer">Timer</string>
    <string name="touch_to_start">Touch to start</string>
    <string name="preparation">Get ready</string>
    <string name="shooting">Shooting</string>

    <!-- Timer settings -->
    <string name="timer_shooting_time">Shooting Time</string>
    <string name="timer_waiting_time">Prepare Time</string>
    <string name="timer_warning_time">Warning Time</string>
    <string name="timer_sound">Sound</string>
    <string name="timer_vibrate">Vibrate</string>

    <!-- Settings -->
    <string name="backup_action">Backup</string>
    <string name="import_action">Import</string>
    <string name="exports_as_csv">Exports as csv</string>
    <string name="licences">Open Source-Licences</string>
    <string name="licences_summary">Legal notes to licences</string>
    <string name="version">Version %s</string>
    <plurals name="second">
...
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="new_round_template">New template</string>
    <string name="arrow_numbers">Arrow numbers</string>
    <string name="round_removed">Round deleted!</string>
    <string name="custom_round">Custom round</string>
    <string name="filter">Filter</string>
    <string name="club">Club</string>
    <string name="target">Target</string>
    <string name="standard_round">Standard round</string>
    <string name="use_as_template">Use as template?</string>
    <string name="create_copy">This is a standard round!\nDo you want to create a copy in order to edit it?</string>
    <string name="practice">Practice</string>
    <string name="edit_training">Edit Training</string>
...
    <string name="network_linkedin">Network on LinkedIn</string>
    <string name="search">Search</string>
    <string name="us">US</string>
    <string name="show_shots_training">Whole training</string>
    <string name="show_shots_round">Current round</string>
    <string name="show_shots_end">Current end</string>
    <string name="profile">Profile</string>
    <string name="birthday">Birthday</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="show_signature">Signature</string>
    <string name="archer">Archer</string>
    <string name="hits">Hits</string>
    <string name="misses">Misses</string>
    <string name="new_end">New end</string>
    <string name="distribution">Distribution</string>
    <string name="count">Count</string>
    <string name="diameter">Diameter</string>
    <string name="input">Input</string>
    <string name="target_zoom">Target zoom level</string>
    <string name="action_pdf">Export as PDF</string>
    <string name="arrow_diameter_scale">Arrow diameter scale</string>
    <string translatable="false" name="transition_root_view">transition_root_view</string>
    <string name="timestamp">Timestamp</string>
    <string name="change_target_face">Change target face</string>
    <string name="your_first_training">Your first training</string>
    <string name="grouping">Grouping</string>
    <string name="show_clusters">Clusters</string>
...
    <string name="displayed_shots">Displayed shots</string>
    <string name="invalid_decimal_number">Invalid decimal number</string>
    <string name="not_within_expected_range_mm">Not within the expected range of 1 to 20 mm</string>
    <string name="not_within_expected_range_inch">Not within the expected range of 0 to 1 inch</string>
    <string name="next_round">Next round</string>
    <string name="previous_round">Previous round</string>
    <string name="overview">Overview</string>
    <string name="score">Score</string>
    <string name="show_reached_score">Show reached score</string>
    <string name="show_total_score">Show total score</string>
    <string name="show_percentage">Show percentage</string>
    <string name="show_arrow_average">Show arrow average</string>
    <string name="image_deleted">Image deleted</string>
    <string name="delete_image">Delete image?</string>
    <string name="keyboard_type">Keyboard type</string>
    <string name="keyboard_enabled">Keyboard enabled</string>
    <string name="sort_shots">Sort shots</string>
    <string name="sort_shots_for_spots">Sort shots for spot target faces</string>
    <string name="target_captain">Target captain</string>
    <string name="language">Language</string>
    <string name="warning_backup_experimental">Warning: This feature is still experimental! Please check in regular intervals if the backup was really successful!</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="click_to_enter_profile">Click to enter profile information</string>
...
