...
            android:layout_below="@+id/details">

            <ViewStub
                android:id="@+id/targetViewStub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inflatedId="@+id/targetViewContainer"
                android:layout="@layout/partial_target_view"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
...
